--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bower": "^1.6.5",
     "browser-sync": "^2.9.11",
     "browserify": "^12.0.1",
+    "d3": "^3.5.9",
     "debowerify": "^1.3.1",
     "del": "^2.0.2",
     "eslint": "^1.9.0",
@@ -27,6 +28,8 @@
     "gulp-uglify": "^1.4.2",
     "gulp-useref": "^2.0.1",
     "gulp-util": "^3.0.7",
+    "handlebars": "^4.0.5",
+    "hbsfy": "^2.4.1",
     "igdeploy": "^0.1.0",
     "merge-stream": "^1.0.0",
     "nodemon": "^1.8.1",
@@ -47,5 +50,8 @@
     "start": "nodemon --watch gulpfile.babel.js --watch .scss-lint.yml --exec 'gulp clean && gulp serve'",
     "deploy": "gulp deploy",
     "test": "npm run build"
+  },
+  "dependencies": {
+    "marked": "^0.3.5"
   }
 }
