--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,8 @@
     "o-fonts": "~1.6.4",
     "o-footer": "~4.0.0",
     "o-grid": "~4.0.0"
+  },
+  "devDependencies": {
+    "o-buttons": "~3.0.3"
   }
 }
